--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
+    "slugify": "^1.6.6",
     "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
